<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nschulzke.calculator.CalculatorActivity">

    <LinearLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutStack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <com.nschulzke.calculator.StackView
                android:id="@+id/stackView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="4dp"
                android:layout_weight="1.0"
                android:background="?attr/colorBackgroundFloating"
                android:clickable="true"
                android:elevation="4dp"
                android:gravity="bottom|right|end"
                android:maxLines="@integer/max_stack_lines"
                android:onClick="swap"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:textAlignment="gravity"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="?attr/colorBackgroundFloating"
                android:elevation="4dp"
                android:gravity="end"
                android:paddingBottom="2dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:textAlignment="textEnd"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutButtonsSide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3.0">

            <Button
                android:id="@+id/buttonClear"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1.0"
                android:elevation="4dp"
                android:longClickable="false"
                android:onClick="pop"
                android:text="@string/button_clear"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonBack"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonBack"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1.0"
                android:elevation="4dp"
                android:longClickable="true"
                android:onClick="backspace"
                android:text="@string/button_back"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutPanel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingTop="8dp"
        tools:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:onClick="addDigit"
            android:text="@string/button_dot"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/buttonAdd"
            app:layout_constraintRight_toLeftOf="@+id/button0" />

        <Button
            android:id="@+id/button0"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:onClick="addDigit"
            android:text="@string/button_0"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/buttonDot"
            app:layout_constraintRight_toLeftOf="@+id/buttonEnter" />

        <Button
            android:id="@+id/button1"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:fadeScrollbars="false"
            android:onClick="addDigit"
            android:text="@string/button_1"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonDot"
            app:layout_constraintLeft_toRightOf="@+id/buttonSub"
            app:layout_constraintRight_toLeftOf="@+id/button2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:onClick="addDigit"
            android:text="@string/button_2"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button0"
            app:layout_constraintLeft_toRightOf="@+id/button1"
            app:layout_constraintRight_toLeftOf="@+id/button3" />

        <Button
            android:id="@+id/button3"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:onClick="addDigit"
            android:text="@string/button_3"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonEnter"
            app:layout_constraintLeft_toRightOf="@+id/button2"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:onClick="addDigit"
            android:text="@string/button_4"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintLeft_toRightOf="@+id/buttonMult"
            app:layout_constraintRight_toLeftOf="@+id/button5" />

        <Button
            android:id="@+id/button5"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:onClick="addDigit"
            android:text="@string/button_5"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintLeft_toRightOf="@+id/button4"
            app:layout_constraintRight_toLeftOf="@+id/button6" />

        <Button
            android:id="@+id/button6"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:onClick="addDigit"
            android:text="@string/button_6"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintLeft_toRightOf="@+id/button5"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/button7"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:onClick="addDigit"
            android:text="@string/button_7"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintLeft_toRightOf="@+id/buttonDiv"
            app:layout_constraintRight_toLeftOf="@+id/button8" />

        <Button
            android:id="@+id/button8"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:onClick="addDigit"
            android:text="@string/button_8"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintLeft_toRightOf="@+id/button7"
            app:layout_constraintRight_toLeftOf="@+id/button9" />

        <Button
            android:id="@+id/button9"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:onClick="addDigit"
            android:text="@string/button_9"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button6"
            app:layout_constraintLeft_toRightOf="@+id/button8"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/buttonDiv"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:onClick="runOp"
            android:text="@string/button_div"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonMult"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button7" />

        <Button
            android:id="@+id/buttonMult"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:onClick="runOp"
            android:text="@string/button_mult"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonSub"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button4" />

        <Button
            android:id="@+id/buttonSub"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:onClick="runOp"
            android:text="@string/button_sub"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button1" />

        <Button
            android:id="@+id/buttonAdd"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:onClick="runOp"
            android:text="@string/button_add"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/buttonDot" />

        <Button
            android:id="@+id/buttonEnter"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp"
            android:longClickable="true"
            android:onClick="pushNum"
            android:text="@string/button_enter"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/button0"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
